# ZO-agentic-framework

./: .gitignore  .zaf-skill.md  README.md  package.json
.jules/: sentinel.md
assets/screenshots/: .gitkeep
cli/: test-harness.js  zaf.js  zo.js
dashboard/: app.js  config.json  index.html  package.json  parse.js  server.js  style-paperclip.css  style.css
dashboard/templates/new-repo/minimal/: CLAUDE.md
dashboard/templates/new-repo/zaf-standard/: AGENTS.md  CLAUDE.md  CODEX.md
docs/: ARCHITECTURE.md  CHANGELOG.md  EXTENSION-GUIDE.md  PERSISTENCE.md  PROGRAMME-PLANNER.md  QUICKSTART.md  ROADMAP.md  TICKET-STANDARD.md  WIP-MIRROR.md  agent-taxonomy.md  coo-spec.md  programme-standard.md  session-bootstrap.md  ticket-standard.md
examples/demo-project/: README.md
examples/demo-project/WIP/tickets/OPEN/: DEMO-001-first-agent-run.md
extension/: extension.js  package.json  zaf-control-2.0.0.vsix  zaf-control-2.1.0.vsix
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs
