[package]
name = "app"
version = "0.1.0"
description = "ZAF Control Plane"
authors = ["Nassau-1 <enzoterrier@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Produces zaf.exe; an optional post-build copy can rename to "ZAF.exe" for display.
[[bin]]
name = "zaf"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
